# friscy

./: .gitignore  AGENTS.md  Cargo.toml  PERFORMANCE-ACCELERATION-PLAN.md  README.md  RESEARCH-emulation-acceleration.md  SYSCALL_TODO.md  friscy-pack-index.html.template  package-lock.json  package.json
.claude/: setttings.json
.github/workflows/: doc-gardening.yml  docs-lint.yml  pages.yml  smoke-test.yaml
aot/: Cargo.toml  README.md
aot-jit/: Cargo.toml
aot-jit/src/: lib.rs
aot/src/: cfg.rs  disasm.rs  elf.rs  lib.rs  main.rs  translate.rs  wasm_builder.rs
bridge/: network_bridge.js
docs/: ARCHITECTURE.md  CRAZY_PERF_IDEAS.md  DESIGN.md  ENDZIEL.md  FRONTEND.md  PERFORMANCE_ROADMAP.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  ROADMAP.md  SECURITY.md  WORKSTREAMS.md
docs/design-docs/: index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/completed/: workstream-a.md  workstream-b.md  workstream-c.md  workstream-d.md  workstream-ef.md
docs/product-specs/: index.md
examples/: Dockerfile.alpine  Dockerfile.busybox
friscy-bundle/: coi-serviceworker.js  friscy.js  friscy.wasm  index.html  jit_manager.js  manifest.json  network_bridge.js  network_rpc_host.js  rv2wasm_jit.js  rv2wasm_jit_bg.wasm  serve.js  service-worker.js  worker.js
proxy/: go.mod  main.go  proxy_test.go
proxy/testdata/: cert.pem  key.pem
runtime/: CMakeLists.txt  elf_loader.hpp  guest.cpp  main.cpp  network.hpp  syscalls.hpp  vfs.hpp
scripts/: doc-gardening.sh  docs-lint.sh  install_pkgs.sh
tests/: baseline_rootfs_checks.sh  bench_browser_claude_predictor_modes.sh  bench_browser_node42.sh  bench_browser_phases.sh  build_nodejs_claude_rootfs.sh  debug_ls.js  run_all.sh  run_network_test.sh  smoke_phase1_peephole.sh  smoke_phase2_jit_dispatch.sh  test_browser_basic.js  test_browser_sim.js  test_build.sh  test_bundle.sh  test_claude_haiku.js  test_claude_version.js  test_echo_server.js  test_echo_server_native.sh  test_go_hello.js  test_http.c  test_http_minimal.c  test_interactive.js  test_multi_cmd.js  test_node.js  test_node_browser.js  test_phase1_echo.js  test_phase1_nodejs.js  test_phase1_nodejs2.js  test_phase1_nodejs3.js  test_phase1_stdin.js  test_runtime.sh  test_rv2wasm.sh  test_server.py  test_shell_debug.js  test_shell_trace.js  test_wasm_alloc.js  test_wasm_alloc2.js  test_wasm_diag.js  test_wasm_oob_debug.js  test_webshell.js  (+1 more)
tests/echo_server/: go.mod  main.go
tools/: Dockerfile.claude  container_to_riscv.sh  friscy-pack  harness.sh  setup_native_harness.sh
tools/go-patched/pkg/tool/linux_amd64/: addr2line  asm  buildid  cgo  covdata  dist  distpack  doc  fix  nm  objdump  pack  test2json
tools/go-patched/src/net/http/: client.go  client_test.go
tools/go-patched/src/runtime/: crash_unix_test.go  malloc.go
tools/go-patched/src/syscall/: mksyscall.pl  mksyscall_libc.pl  mksysctl_openbsd.pl  mksysnum_dragonfly.pl  mksysnum_freebsd.pl  mksysnum_linux.pl  mksysnum_netbsd.pl  mksysnum_openbsd.pl
tools/go-patched/src/time/tzdata/: zzipdata.go
