[package]
name = "rv2wasm"
version = "0.1.0"
edition = "2021"
description = "RISC-V to WebAssembly AOT compiler"

[dependencies]
# ELF parsing
goblin = "0.8"

# RISC-V decoding
riscv-decode = "0.2"

# Wasm generation
wasm-encoder = "0.201"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
wasmparser = "0.201"
